--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
         crossorigin="anonymous">
     <link rel="stylesheet" href=./assets/css/style.css>
+    <link href="https://fonts.googleapis.com/css?family=Bungee+Inline|Syncopate" rel="stylesheet">
 </head>
 
 <body>
@@ -33,23 +34,23 @@
                 <div class="panel panel default">
                     <div class="panel-body">
                         <h2 class="panel title">Target Number</h2>
-                        <h2 id="targetNumber"> 55</h2>
+                        <h2 id="targetNumber"> </h2>
                     </div>
                 </div>
                 <!--4 crystals displayed as buttons on page-->
                 <div class="panel panel-default">
                     <div class="panel-body">
                         <button class="btn btn-default">
-                                <img src="./assets/images/amethyst.jpg" id="cyrstal-1" class="crystalImage">
+                                <img src="./assets/images/amethyst.jpg" id="crystal-1" class="crystalImage" value="">
                         </button>
                         <button class="btn btn-default">
-                                <img src="./assets/images/carnelian.jpg" id="cyrstal-2" class="crystalImage">
+                                <img src="./assets/images/carnelian.jpg" id="crystal-2" class="crystalImage" value="">
                         </button>
                         <button class="btn btn-default">
-                                <img src="./assets/images/fluorite.jpg" id="cyrstal-3" class="crystalImage">
+                                <img src="./assets/images/fluorite.jpg" id="crystal-3" class="crystalImage" value="">
                         </button>
                         <button class="btn btn-default">
-                                <img src="./assets/images/lazuli.jpg" id="cyrstal-4" class="crystalImage">
+                                <img src="./assets/images/lazuli.jpg" id="crystal-4" class="crystalImage" value="">
                         </button>
                     </div>
                 </div>
@@ -57,7 +58,7 @@
                 <div class="panel panel default">
                     <div class="panel-body">
                         <h2 class="panel title">Your Score</h2>
-                        <h2 id="targetNumber"> 35</h2>
+                        <h2 id="currentScore"> </h2>
                     </div>
                 </div>
                 <!--Wins and Losses -->
@@ -78,21 +79,49 @@
 <script type="text/javascript">
 
 $(document).ready(function() {
-    var targetScore;
-    var crystal1;
-    var cyrstal2;
-    var crystal3;
-    var crystal4;
-    var playerScore;
-    var winCounter;
-    var lossCounter;
-    
+    //Random number between 19-120
+    var targetScore = Math.floor(Math.random() * 120) + 19;
+    //Each crystal should have random value between 1-12
+    var crystal1 = Math.floor(Math.random() * 12) + 1;
+    var crystal2 = Math.floor(Math.random() * 12) + 1;
+    var crystal3 = Math.floor(Math.random() * 12) + 1;
+    var crystal4 = Math.floor(Math.random() * 12) + 1;
+    var playerScore = 0;
+    var winCounter = 0;
+    var lossCounter = 0;
+   
+   console.log(targetScore);
+   console.log(crystal1);
+   console.log(crystal2);
+   console.log(crystal3);
+   console.log(crystal4);
+   console.log(playerScore);
+   console.log(winCounter);
+   console.log(lossCounter);
+
+//Player shown random number at start of game 
+    $("#targetNumber").text(targetScore);
+//Player clicks crystal and it adds points to player's score
+    $("#crystal-1").on("click", function(){
+        playerScore=playerScore+crystal1;
+        $("#currentScore").text(playerScore);
+    });
+    $("#crystal-2").on("click", function(){
+        playerScore=playerScore+crystal2;
+        $("#currentScore").text(playerScore);
+    });
+    $("#crystal-3").on("click", function(){
+        playerScore=playerScore+crystal3;
+        $("#currentScore").text(playerScore);
+    });
+    $("#crystal-4").on("click", function(){
+        playerScore=playerScore+crystal4;
+        $("#currentScore").text(playerScore);
+    });
     
 });
-//Player shown random number at start of game 
-//Random number between 19-120
-//Player clicks crystal and it adds points to player's score
-//Each crystal should have random value between 1-12
+
+
 //Player wins if their total score matches random number from beginning of game
 //Player loses if score goes above random number
 //Game restarts whenever player wins or loses
