--- a/index.html
+++ b/index.html
@@ -25,9 +25,16 @@
                 <!--Instructions-->
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h2 class="panel-title">Instructions</h3>
-                            <p> Blah Blah Blah Blah Blah blah blah Blah Blah Blah Blah Blah blah blah Blah Blah Blah Blah Blah
-                                blah blah Blah Blah Blah Blah Blah blah blah </p>
+                        <h1 class="panel-title"><strong><u>Instructions </u></strong></h1>
+                            <p> You will be given a random number at the start of the game. </p>
+                                
+                            <p>There are 4 crystals below. By clicking on a crystal you will add a specific amount of points to your total score. </p>
+
+                            <p> You win the game by matching your total score to the random number. You lose the game if your total score goes above the random number. </p>
+
+                            <p>The value of each crystal is hidden from you until you click on it. </p>
+                            
+                            <p> When the game starts ,the game will change the value of each crystal. </p>
                     </div>
                 </div>
                 <!--Target #-->
